--- a/argocd/app_of_apps/app_of_apps.yaml
+++ b/argocd/app_of_apps/app_of_apps.yaml
@@ -9,6 +9,7 @@ spec:
     repoURL: https://github.com/jolillie/technical_demo.git
     targetRevision: argocd_deployment
     path: argocd/app_of_apps
+    kustomize: {}
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
