--- a/.github/workflows/deploy_infra_plan.yml
+++ b/.github/workflows/deploy_infra_plan.yml
@@ -23,15 +23,19 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
+          cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
 
       - name: Terraform Init
         run: terraform init
+        working-directory: ./terraform
 
       - name: Terraform Validate
         run: terraform validate
+        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan
+        working-directory: ./terraform
 
       # Uncomment this step to enable auto apply
       # - name: Terraform Apply
