--- a/argocd/app_of_apps/quote_collector/quote_collector_deployment.yaml
+++ b/argocd/app_of_apps/quote_collector/quote_collector_deployment.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/jolillie/technical_demo.git
-    targetRevision: master
+    targetRevision: main
     path: argocd/manifests/quote_collector_test
   destination:
     server: https://kubernetes.default.svc
