--- a/.github/workflows/deploy_argo_to_eks.yml
+++ b/.github/workflows/deploy_argo_to_eks.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Create ArgoCD Namespace
       run: |
-        kubectl create namespace argocd
+        kubectl create namespace argocd || true
 
     - name: Deploy ArgoCD
       run: |
@@ -34,3 +34,19 @@ jobs:
       run: |
         kubectl patch svc argocd-server -n argocd \
           -p '{"spec": {"type": "LoadBalancer"}}'
+
+    - name: Store ArgoCD Admin Password in AWS Secrets Manager
+      env:
+        SECRET_NAME: ArgoCDAdminPassword
+      run: |
+        # Get the ArgoCD admin password from Kubernetes
+        PASSWORD=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
+
+        # Check if the secret exists
+        if aws secretsmanager describe-secret --secret-id "$SECRET_NAME" > /dev/null 2>&1; then
+          echo "Updating existing secret..."
+          aws secretsmanager update-secret --secret-id "$SECRET_NAME" --secret-string "$PASSWORD"
+        else
+          echo "Creating new secret..."
+          aws secretsmanager create-secret --name "$SECRET_NAME" --secret-string "$PASSWORD"
+        fi
