--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -6,3 +6,7 @@ all:
           ansible_host: 172.16.1.8
           ansible_user: jon
           ansible_python_interpreter: /usr/bin/python3.6
+        aws_db_server:
+          ansible_host: ec2-54-242-205-214.compute-1.amazonaws.com
+          ansible_user: ubuntu
+          ansible_python_interpreter: /usr/bin/python3.6
