changing from admin to main

--- a/.github/workflows/configure_ec2_mongodb.yml
+++ b/.github/workflows/configure_ec2_mongodb.yml
@@ -32,6 +32,6 @@ jobs:
           ansible-playbook -i "${{ secrets.EC2_HOST }}," ansible/setup_db_vm.yml \
             --private-key /root/.ssh/id_rsa \
             -u ubuntu
-            -e "mongodb_admin_password=${{ secrets.MONGODB_ADMIN_PASSWORD }}" \
-            -e "mongodb_admin_user=${{ secrets.MONGODB_ADMIN_USER }}" \
+            -e "mongodb_main_password=${{ secrets.MONGODB_ADMIN_PASSWORD }}" \
+            -e "mongodb_main_user=${{ secrets.MONGODB_ADMIN_USER }}" \
             -vv
