--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -16,10 +16,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN ansible-galaxy install -r requirements.yml
-
 RUN pip install pymongo
 
 WORKDIR /ansible
+
+COPY requirements.yml /ansible/requirements.yml
+RUN ansible-galaxy install -r requirements.yml
 
 CMD ["bash"]
