--- a/.github/workflows/configure_ec2_mongodb.yml
+++ b/.github/workflows/configure_ec2_mongodb.yml
@@ -25,11 +25,8 @@ jobs:
     - name: Run Ansible inside Docker container
       run: |
         docker run --rm \
-          -v ${{ github.workspace }}:/workspace \
           -v ~/.ssh:/root/.ssh:ro \
-          -w /workspace \
-          custom-ansible \
-          ansible-playbook -i inventory.yml ansible/setup_db_vm.yml \
+          custom-ansible ansible-playbook -i inventory.yml setup_db_vm.yml \
             -e "mongodb_main_password=${{ secrets.MONGODB_ADMIN_PASSWORD }}" \
             -e "mongodb_main_user=${{ secrets.MONGODB_ADMIN_USER }}" \
             -vv
