deploying quote app

--- a/.github/workflows/deploy_argo_to_eks.yml
+++ b/.github/workflows/deploy_argo_to_eks.yml
@@ -51,6 +51,12 @@ jobs:
           aws secretsmanager create-secret --name "$SECRET_NAME" --secret-string "$PASSWORD"
         fi
 
+    - name: Create MongoDB Secret
+      run: |
+        kubectl create secret generic mongo-credentials \
+          --from-literal=MONGO_URI="${{ secrets.MONGO_URI }}" \
+          --dry-run=client -o yaml | kubectl apply -f -
+
     - name: Deploy App of Apps
       run: |
         kubectl apply -f argocd/app_of_apps/app_of_apps.yaml
