--- a/argocd/app_of_apps/kustomization.yaml
+++ b/argocd/app_of_apps/kustomization.yaml
@@ -1,3 +1,3 @@
 resources:
   - tetris/tetris_deployment.yaml
-  # - quote_collector/quote_collector_deployment.yaml
+  - quote_collector/quote_collector_deployment.yaml
