--- a/argocd/manifests/quote_collector/deployment.yaml
+++ b/argocd/manifests/quote_collector/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: quote-collector
-  namespace: quote-demo
+  namespace: quote-collector
 spec:
   replicas: 1
   selector:
