--- a/.github/workflows/code_scanning.yml
+++ b/.github/workflows/code_scanning.yml
@@ -30,16 +30,22 @@ jobs:
       run: |
         echo "Sending results to Discord..."
 
-        truncate -s 1900 trivy_results.txt  # Discord limit is 2000 chars
+        truncate -s 1900 trivy_results.txt
         truncate -s 1900 checkov_results.txt
 
         trivy_summary=$(cat trivy_results.txt)
         checkov_summary=$(cat checkov_results.txt)
 
         run_url="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
-        message="**🔍 Trivy Results:**\n\`\`\`\n$trivy_summary\n\`\`\`\n**🛡 Checkov Results:**\n\`\`\`\n$checkov_summary\n\`\`\`\n**Run URL:** $run_url"
 
-        curl -H "Content-Type: application/json" \
-             -X POST \
-             -d "{\"content\": \"$message\"}" \
-             $DISCORD_WEBHOOK_URL
+        # Use jq to safely format JSON
+        jq -n \
+          --arg trivy "$trivy_summary" \
+          --arg checkov "$checkov_summary" \
+          --arg url "$run_url" \
+          --arg run_text "**🔍 Trivy Results:**\n```\n$trivy_summary\n```\n**🛡 Checkov Results:**\n```\n$checkov_summary\n```\n**🔗 Run URL:** $run_url" \
+          '{content: $run_text}' \
+        | curl -H "Content-Type: application/json" \
+               -X POST \
+               -d @- \
+               "$DISCORD_WEBHOOK_URL"
