--- a/.github/workflows/code_scanning.yml
+++ b/.github/workflows/code_scanning.yml
@@ -13,10 +13,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Run Trivy
-      id: trivy
-      run: |
-        trivy config . > trivy_results.txt || true
+    - name: Run Trivy vulnerability scanner in IaC mode
+      uses: aquasecurity/trivy-action@0.28.0
+      with:
+        scan-type: 'config'
+        hide-progress: true
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+        exit-code: '1'
+        severity: 'CRITICAL,HIGH'
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: 'trivy-results.sarif'
 
     - name: Run Checkov
       id: checkov
@@ -30,22 +40,26 @@ jobs:
       run: |
         echo "Sending results to Discord..."
 
-        truncate -s 1900 trivy_results.txt
-        truncate -s 1900 checkov_results.txt
-
-        trivy_summary=$(cat trivy_results.txt)
-        checkov_summary=$(cat checkov_results.txt)
+        # Truncate to keep within Discord's 2000 character limit per message
+        trivy_summary=$(head -c 1800 trivy_results.txt)
+        checkov_summary=$(head -c 1800 checkov_results.txt)
 
         run_url="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
 
-        # Use jq to safely format JSON
-        jq -n \
-          --arg trivy "$trivy_summary" \
-          --arg checkov "$checkov_summary" \
-          --arg url "$run_url" \
-          --arg run_text "**🔍 Trivy Results:**\n```\n$trivy_summary\n```\n**🛡 Checkov Results:**\n```\n$checkov_summary\n```\n**🔗 Run URL:** $run_url" \
-          '{content: $run_text}' \
-        | curl -H "Content-Type: application/json" \
-               -X POST \
-               -d @- \
-               "$DISCORD_WEBHOOK_URL"
+        # Escape strings for JSON using jq’s @json
+        trivy_json=$(jq -Rn --arg str "$trivy_summary" '$str | @json')
+        checkov_json=$(jq -Rn --arg str "$checkov_summary" '$str | @json')
+        url_json=$(jq -Rn --arg str "$run_url" '$str | @json')
+
+        # Strip surrounding quotes from JSON strings (optional, for clean formatting)
+        trivy_clean=${trivy_json:1:-1}
+        checkov_clean=${checkov_json:1:-1}
+        url_clean=${url_json:1:-1}
+
+        message="**🔍 Trivy Results:**\n\`\`\`\n$trivy_clean\n\`\`\`\n**🛡 Checkov Results:**\n\`\`\`\n$checkov_clean\n\`\`\`\n🔗 [View Full Run]($url_clean)"
+
+        jq -n --arg content "$message" '{content: $content}' \
+          | curl -H "Content-Type: application/json" \
+                 -X POST \
+                 -d @- \
+                 "$DISCORD_WEBHOOK_URL"
