--- a/argocd/app_of_apps/prometheus/prometheus_deployment.yaml
+++ b/argocd/app_of_apps/prometheus/prometheus_deployment.yaml
@@ -6,12 +6,16 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/jolillie/technical_demo.git
-    targetRevision: main
-    path: argocd/manifests/prometheus
+    repoURL: https://prometheus-community.github.io/helm-charts
+    chart: kube-prometheus-stack
+    targetRevision: 56.7.0  # Check for latest
     helm:
-      valueFiles:
-        - values.yaml
+      values: |
+        prometheus:
+          prometheusSpec:
+            serviceMonitorSelectorNilUsesHelmValues: false
+        grafana:
+          enabled: true
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
@@ -19,3 +23,5 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
